frontend/styles.css
:root {
    --bright-orange: #ff5023;
    --medium-orange: #ff9812;
    --light-orange: #f1edea;
    --text-color: #333;
    --dimmed-text-color: rgb(82, 82, 82);
    --dimmed: rgba(0, 0, 0, 0.4);
    --almost-white: #fefefe;
    --background-grey: #aaaaaa;
    --even-grey: #f3f3f3;
    --border-grey: #888;
    --default-fonts: Verdana, Geneva, Tahoma, sans-serif;
    --hover-transition: all 0.3s ease-in-out;
    --search-grey: #e6e6e6;
}

body {
    color: var(--text-color);
    font-family: var(--default-fonts);
    font-size: 1em;
    line-height: 1.5;
}

button,
.button {
    background-color: var(--bright-orange);
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
    font-size: 1em;
    padding: 0.5em 1em;
    text-decoration: none;
    float: right;
    transition: var(--hover-transition);
    margin-left: 12px;
}

button {
    border: 0;
    line-height: 1.5;
}

button:hover,
button:focus,
.button:hover,
.button:focus {
    background-color: var(--medium-orange);
}

.secondary-button {
    background-color: var(--text-color);
}

.secondary-button:hover,
.secondary-button:focus {
    background-color: var(--dimmed-text-color);
}

.bottom-button {
    margin-top: 20px;
}

::selection {
    background: var(--medium-orange);
}

input:focus {
    outline: none;
    box-shadow: 0 0 0 3px var(--medium-orange);
    border: 0;
}

.hidden {
    display: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    table-layout: fixed;
}
table th {
    background-color: var(--text-color);
    color: #fff;
    padding: 0.5em 1em;
    text-align: left;
    overflow-wrap: break-word;
}
table td {
    border-bottom: 1px solid var(--background-grey);
    padding: 0.5em 1em;
    overflow-wrap: break-word;
}

#transactionTableBody tr:nth-child(even) {
    background-color: var(--even-grey);
}

#transactionTableBody tr:hover:not(.no-transactions) {
    background-color: var(--light-orange);
}

#transactionTableBody tr:not(.no-transactions) {
    cursor: pointer;
}

/* Loading icon */
.loading-ring {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.loading-ring div {
    box-sizing: border-box;
    display: block;
    position: absolute;
    width: 5em;
    height: 5em;
    border: 1em solid var(--bright-orange);
    border-radius: 50%;
    animation: loading-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    border-color: var(--bright-orange) transparent transparent transparent;
}
.loading-ring div:nth-child(1) {
    animation-delay: -0.45s;
}
.loading-ring div:nth-child(2) {
    animation-delay: -0.3s;
}
.loading-ring div:nth-child(3) {
    animation-delay: -0.15s;
}
@keyframes loading-ring {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
/* End loading icon */

/* CSS for the modal */
.modal-background {
    display: block;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: var(--dimmed);
}

.modal-foreground {
    background-color: var(--almost-white);
    margin: 2% auto 2% auto;
    padding: 15px 20px 20px 20px;
    border: 1px solid var(--border-grey);
    max-width: 900px;
    width: 70%;
    border-radius: 15px;
    overflow: hidden;
}

.small-modal {
    max-width: 365px;
}

hr {
    border: 0;
    height: 5px;
    width: calc(90% - 20px); /* save room for close button if applicable */
    float: left;
    background-image: linear-gradient(90deg, var(--bright-orange), transparent);
}

hr.invert {
    float: right;
    background-image: linear-gradient(270deg, var(--bright-orange), transparent);
}

#bottom-hr {
    margin: 25px 0 25px 0;
}

.close {
    color: var(--background-grey);
    float: right;
    font-weight: bold;
    transform: scale(1.5);
    font-size: 1.2em;
    line-height: normal;
    transition: var(--hover-transition);
}

.close:hover,
.close:focus {
    color: var(--text-color);
    text-decoration: none;
    cursor: pointer;
}
/* End CSS for the modal */

input {
    border: 1px solid var(--text-color);
    border-radius: 5px;
    font-size: 1em;
    padding: 0.5em 1em;
    font-family: var(--default-fonts);
    display: block;
    margin-bottom: 1em;
    margin-top: 0.2em;
    width: 330px;
}

label {
    font-weight: bold;
}

.small-page {
    width: 365px;
    margin: auto;
}

.icon {
    display: inline-block;
    transform: scale(1.5);
}

#logo {
    width: 4rem;
    height: 4rem;
    cursor: pointer;
}

.title {
    display: inline-block;
    margin-bottom: 10px;
}

.title-text {
    font-size: 2.5em;
    font-weight: bold;
}

.subtitle {
    font-size: 1.25em;
    color: var(--dimmed-text-color);
    white-space: nowrap;
}

#page {
    max-width: 1500px;
    margin: auto;
}

.amount {
    text-align: right;
    padding-right: 3%;
}

h1,
h2 {
    display: inline-block;
}

h2 {
    font-weight: normal;
    margin-left: 15px;
    font-size: 1.25em;
}

.sortable-header {
    cursor: pointer;
}

.sortable-header::after {
    content: "";
    display: inline-block;
    margin-left: 0.5em;
    border-right: 0.5em solid transparent;
    border-left: 0.5em solid transparent;
}

.sortable-header:hover::after {
    color: var(--bright-orange);
    transition: var(--hover-transition);
}

.sortable-header[data-sort-dir="asc"]::after {
    border-bottom: 0.5em solid;
}

.sortable-header[data-sort-dir="desc"]::after {
    border-top: 0.5em solid;
}

/* select sortable headers without data-sort-dir on hover */
.sortable-header:hover:not([data-sort-dir])::after {
    border-bottom: 0.5em solid;
    color: var(--background-grey);
}

thead {
    user-select: none;
}

#search-container {
    display: flex;
    align-items: center;
    background-color: var(--search-grey);
    border-radius: 10px;
    margin-bottom: 10px;
    padding-right: 10px;
}

#search-input {
    flex: 1;
    margin: 10px;
    border: none;
    font-size: 16px;
    padding: 0.5em 1em;
    line-height: 1.5;
}

.no-transactions {
    text-align: center;
    font-size: 1.5em;
    margin: 1em;
}

#scroll-top {
    align-items: center;
    background-color: var(--bright-orange);
    border-radius: 50%;
    bottom: 20px;
    color: white;
    cursor: pointer;
    display: none;
    font-size: 1.5rem;
    height: 50px;
    justify-content: center;
    position: fixed;
    right: 20px;
    transition: var(--hover-transition);
    width: 50px;
    animation: fadeIn 0.5s;
}

#scroll-top:hover {
    background-color: var(--medium-orange);
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

nav {
    margin-bottom: 10px;
    overflow: hidden;
}

.nav-buttons {
    display: inline;
}

@media (max-width: 1100px) {
    .nav-buttons {
        display: block;
        margin: auto;
        overflow: hidden;
    }

    .nav-buttons .button {
        float: left;
    }

    .nav-buttons .button:first-child {
        margin-left: 0;
    }
}

@media (max-width: 550px) {
    .modal-foreground {
        width: calc(100% - 48px);
    }
    input {
        width: 300px;
    }
}

